Changed title and added title bar icon

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>TV Show Sorting</title>
+    <link rel="shortcut icon" type="image/x-icon" href="https://cdn1.iconfinder.com/data/icons/electronics-appliances-51/48/19-512.png">
+
     <!--CSS-->
     <link rel="stylesheet" type="text/css" href="CSS/style.css">
 </head>
