--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>TV Show Sorting</title>
+    <title>TV Show Sorter</title>
     <link rel="shortcut icon" type="image/x-icon" href="https://cdn1.iconfinder.com/data/icons/electronics-appliances-51/48/19-512.png">
 
     <!--CSS-->
